working on nasa exercise

--- a/nasa-api/nasa-images.html
+++ b/nasa-api/nasa-images.html
@@ -14,7 +14,8 @@
       <input type="submit" value="Submit">
     </form>
   </div>
-  <div class="nasa-images"></div>
+  <div id="nasa-images"></div>
+
   <script src="nasa-images.js"></script>
 </body>
 </html>
